# AWE_Lexica

./: LICENSE  README.md  setup.cfg
awe_lexica/: errors.py
awe_lexica/data/: AcademicKeywordList.txt  Concr_Base.csv  EnglishMS_WordList.txt  Health_MS_WordList.txt  Math_MS_WordList.txt  NAWL.txt  Science_MS_WordList.txt  SentiWord_1.0.csv  SocialStudies_MS_WordList.txt  UniversityWordList.txt  argVoc.csv  awlsublists.txt  mhyph.txt  transition_terms.json  wordfamilies.txt
awe_lexica/json_data/: academic.json  family_idxs.json  family_lists.json  family_max_freqs.json  family_sizes.json  latinate.json  nMorph_status.json  roots.json  sentiment.json  stancePerspectiveVoc.json  syllables.json  transition_categories.json  transition_terms.json
awe_lexica/setup/: data.py
